--- a/Yeppers.html
+++ b/Yeppers.html
@@ -70,7 +70,7 @@ body {
 </p>
 </head>
 
-<img src="images (1).jpg" class="image">
+<img src="./images(1).png"" class="image">
 
 <div class="button-container">
   <button class="yes" onclick="handleYesClick()">Yes</button>
