--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body {
 </p>
 </head>
 
-<img src="images/images (1).png" class="image">
+<img src="hehe/images (1).jpg" class="image">
 
 <div class="button-container">
   <button class="yes" onclick="handleYesClick()">Yes</button>
