--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body {
 </p>
 </head>
 
-<img src="./images (1).png" class="image">
+<img src="https://github.com/jowdss/hehe/blob/main/images%20(1).jpg?raw=true" class="image">
 
 <div class="button-container">
   <button class="yes" onclick="handleYesClick()">Yes</button>
