--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ function moveButton() {
 <script>
   function handleYesClick() {
     alert('hehehe');
-    window.open("https://youtu.be/ZCFGuAPhfXc", "_blank");
+    window.open("https://www.youtube.com/watch?v=ZCFGuAPhfXc&ab_channel=judd", "_blank");
     target="_blank"
   }
 </script>
